--- a/lecture1.css
+++ b/lecture1.css
@@ -6,3 +6,16 @@
 
 
 }
+
+
+li{
+   width: 200px;
+   background-color: rgb(158, 182, 237);
+   display: flex;
+   justify-content: space-between;
+    margin: 5px;
+   padding: 5px;
+    
+    
+   
+}
